--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "csv-parse": "^5.5.5",
     "csv-parser": "^3.0.0",
     "express": "^4.19.2",
+    "fuse.js": "^7.0.0",
     "lodash": "^4.17.21",
     "xml2js": "^0.6.2"
   }
